# speech-decoding

./: .gitignore  README.md  accuracy.py  classfication_by_prompt.py  constants.py  eval_wowandb_cv.py  eval_wowandb_cv_imagenet_val.py  evaluate.py  models.py  my_app.py  pyproject.toml  requirements.txt  train.py  train_my_classifier.py  train_regression.py  train_wowandb.py  train_wowandb_cv.py  train_wowandb_cv_contrastive.py  train_wowandb_cv_regression.py  train_wowandb_cv_regression_all_subject.py
8/: settings.json
assets/: evaluate.m  reports.md
configs/: args.py  brennan2018.yml  config.yaml  config_GOD.yaml  gwilliams2022.yml  parser.py
data/: Gwilliams2022  brennan2018.py  datasets.py  gwilliams2022.py  gwilliams2022_multicore.py  gwilliams2022_proto.py
examples/: calc_correcoeff.py  check_coorof_corr_subjects.py  check_corrof_corr.py  check_corrof_corr_src_reconst.py  check_corrof_corr_subjects.py  check_prompt.py  create_GOD_features.py  create_GOD_features_l14.py  create_imagenet_features.py  inference.py  kamitani_regression.py  rest.py  view_training_curve.py
meg_decoding/: evaluate.py  models.py
models/: brain_encoder.py  brain_encoder_proto.py  classifier.py
notebooks/: Untitled.ipynb  attention_check.ipynb  check_GOD_image_feature.ipynb  check_category_similarity.ipynb  check_cross_entropy.ipynb  check_kernel.ipynb  create_imagenet_features.ipynb  image_featuers_check.ipynb  vis_meg.ipynb
speech_decoding/: constants.py  models.py
tests/: test_brennan_dataclass.py  test_models.py  test_utils.py  test_wave2vec.py
tmp/: mne_related.ipynb  (+2 more)
(+97 files in other folders)
